// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Failure /> doesnt render code frame if a common error 1`] = `
"
[30m[41m ERROR [49m[39m

  Something is broken!
"
`;

exports[`<Failure /> reduces command line by half when index appears off screen 1`] = `
"
 ERROR 

  Flags and short option groups may not use inline values.

                                                 ┌────────┐
  … wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww\\" --flag=123 -gSA \\"mmmmmmmmmmmmmm …
"
`;

exports[`<Failure /> renders a common error 1`] = `
"
[30m[41m ERROR [49m[39m

  Something is broken!
"
`;

exports[`<Failure /> renders a parse error 1`] = `
"
[30m[41m ERROR [49m[39m

  Flags and short option groups may not use inline values.
"
`;

exports[`<Failure /> renders a parse error with a command line 1`] = `
"
 ERROR 

  Flags and short option groups may not use inline values.

                    ┌────────┐
  boost --foo value --flag=123 -gSA
"
`;

exports[`<Failure /> renders a validation error 1`] = `
"
[30m[41m ERROR [49m[39m

  Not enough arity arguments.
"
`;

exports[`<Failure /> renders a validation error with a command line 1`] = `
"
 ERROR 

  Not enough arity arguments.

        ┌───┐
  boost --foo value --flag=123 -gSA
"
`;
